syntax = "proto3";

service Registration{
 rpc UsersRegistration(Message) returns (MessageResponse) {}
 rpc PinRegistration(PinMessage) returns (PinMessageResponse) {}
 rpc Login(LoginMessage) returns (LoginResponse) {}
}

message Message{
 string email = 1;
 string password = 2;
 string username = 3;
 string phone_num = 4;
 bool confirmed = 5;
}

message MessageResponse{
 bool available = 1;
 bool unregistered = 2;
}

message PinMessage{
    string phone = 1;
    int32 pin = 2;
    string db_op = 3;
    bool real_user = 4;
}

message PinMessageResponse{
    bool received = 1;
    int32 pin = 2;
}

message LoginMessage{
    string phone_num = 1;
}

message LoginResponse{
    string password = 1;
    string username = 2;
    bool confirmed = 3;
}